k8s/services/api-gateway/api-gateway-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: tripezzy
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - host: tripezzy.local
      http:
        paths:
          - pathType: Prefix
            path: /api(/|$)(.*)
            backend:
              service:
                name: api-gateway
                port:
                  number: 80
